2006-08-18  Nate Nielsen  <nielsen@memberwebs.com>

    * data/seahorse.schemas.in: Fix syntax error in schema
    Fixes #351833
    
2006-08-17  Nate Nielsen  <nielsen@memberwebs.com>

    * NEWS:
    * README:
    * configure.in: New version 0.9.2.1
    * configure.in: Update version number
    
2006-08-17  Adam Schreiber  <sadam@clemson.edu>
    
    * libseahorse/seahorse-pgp-key-op.c:
    * src/seahorse-key-properties.c: Fixes issues with trust display
    and setting caused by homogenization with libcryptui. Fixes #350206

2006-08-17  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/seahorse-key-store.c:
    * libseahorse/seahorse-key-store.h:
    * libseahorse/seahorse-keyset.c:
    * libseahorse/seahorse-key-manager-store.c:
    * libseahorse/seahorse-key-manager.c: Select keys after importing.
    Fixes #338287
    
2006-08-17  Nate Nielsen  <nielsen@memberwebs.com>

    * src/seahorse-key-manager.c:
    * src/seahorse-key-manager.ui: Remove useless 'View' menu. 
    
2006-08-17  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/seahorse-pgp-source.c: When importing a PGP key make
    sure to refresh imported keys synchronously. This fixes problems 
    returning the list of keys that were imported.
    
2006-08-17  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/seahorse-transfer-operation.c: Add proper destroy
    callback for gchar* 
    
2006-08-17  Nate Nielsen  <nielsen@memberwebs.com>

    * NEWS:
    * README: New version 0.9.2
    * configure.in: Update version number
    
2006-08-17  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/seahorse-transfer-operation.c: Remove bum 
    destroy callback for gpgme_data_t. 
    
2006-08-17  Nate Nielsen  <nielsen@memberwebs.com>

    * src/seahorse-keyserver-sync.c: Small fix when somehow no keys
    are found to sync. Displays '0 keys selected for syncing'
    
2006-08-17  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/seahorse-prefs-cache.c: