@@ -1,3 +1,10 @@
+2006-08-18  Adam Schreiber  <sadam@clemson.edi>
+
+    * libseahorse/seahorse-pgp-key-op.c:
+    * src/seahorse-key-properties.c: Modified the trust
+    combo box to use a GtkTreeModel and only present the appropriate
+    options.
+
 2006-08-18  Nate Nielsen  <nielsen@memberwebs.com>
 
     * data/seahorse.schemas.in: Fix syntax error in schema
